--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,48 @@
 name: commconnect
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
+  another_flushbar: ^1.12.30
+  cached_network_image: ^3.2.3
+  clock: ^1.1.1
+  cupertino_icons: ^1.0.6
+  dio: ^5.3.2
+  dio_cache_interceptor: ^3.4.2
+  dio_cache_interceptor_hive_store: ^3.2.1
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.1
+  flutter_riverpod: ^2.4.0
+  flutter_secure_storage: ^9.0.0
+  freezed_annotation: ^2.4.1
+  go_router: ^10.1.2
+  google_fonts: ^6.0.0
+  hooks_riverpod: ^2.4.0
+  image_picker: ^1.0.4
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  riverpod_annotation: ^2.1.5
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  riverpod_generator: ^2.3.2
+  riverpod_lint: ^2.1.0
+  custom_lint: ^0.5.3
+  json_serializable: ^6.7.1
+  freezed: ^2.4.2
+  very_good_analysis: ^5.1.0
+  
 
 flutter:
   uses-material-design: true
