--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   dio: ^5.3.2
   dio_cache_interceptor: ^3.4.2
   dio_cache_interceptor_hive_store: ^3.2.1
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
+  firebase_ui_auth: ^1.8.0
+  firebase_ui_firestore: ^1.5.11
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.1
