--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
+  animated_custom_dropdown: ^1.5.0
   another_flushbar: ^1.12.30
   cached_network_image: ^3.3.0
   clock: ^1.1.1
@@ -14,10 +15,10 @@ dependencies:
   dio: ^5.3.3
   dio_cache_interceptor: ^3.4.4
   dio_cache_interceptor_hive_store: ^3.2.1
-  firebase_auth: ^4.10.0
-  firebase_core: ^2.16.0
-  firebase_ui_auth: ^1.8.0
-  firebase_ui_firestore: ^1.5.11
+  # firebase_auth: ^4.10.0
+  # firebase_core: ^2.16.0
+  # firebase_ui_auth: ^1.8.0
+  # firebase_ui_firestore: ^1.5.11
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.2
@@ -26,6 +27,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^11.1.2
   google_fonts: ^6.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   hooks_riverpod: ^2.4.2
   image_picker: ^1.0.4
   intl: ^0.18.1
@@ -46,6 +49,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   freezed: ^2.4.3
   very_good_analysis: ^5.1.0
+  hive_generator: ^2.0.1
   
 
 flutter:
