--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,50 +7,49 @@ environment:
   sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
-  animated_custom_dropdown: ^1.5.0
+  animated_custom_dropdown: ^2.0.0
   another_flushbar: ^1.12.30
   cached_network_image: ^3.3.0
   clock: ^1.1.1
   cupertino_icons: ^1.0.6
-  dio: ^5.3.3
-  dio_cache_interceptor: ^3.4.4
-  dio_cache_interceptor_hive_store: ^3.2.1
+  dio: ^5.4.0
+  dio_cache_interceptor: ^3.5.0
+  dio_cache_interceptor_hive_store: ^3.2.2
   # firebase_auth: ^4.10.0
   # firebase_core: ^2.16.0
   # firebase_ui_auth: ^1.8.0
   # firebase_ui_firestore: ^1.5.11
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.2
-  flutter_riverpod: ^2.4.2
+  flutter_hooks: ^0.20.3
+  flutter_riverpod: ^2.4.9
   flutter_secure_storage: ^9.0.0
   freezed_annotation: ^2.4.1
-  go_router: ^11.1.2
+  go_router: ^13.0.0
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  hooks_riverpod: ^2.4.2
-  image_picker: ^1.0.4
-  intl: ^0.18.1
+  hooks_riverpod: ^2.4.9
+  image_picker: ^1.0.5
+  intl: ^0.19.0
   json_annotation: ^4.8.1
   path: ^1.8.3
   path_provider: ^2.1.1
-  riverpod_annotation: ^2.1.6
-  shared_preferences: ^2.2.1
+  riverpod_annotation: ^2.3.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.3
-  build_runner: ^2.4.6
-  riverpod_generator: 3.0.0-dev.2
-  riverpod_lint: ^2.2.1
-  custom_lint: ^0.5.3
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
+  riverpod_generator: 2.3.9
+  riverpod_lint: ^2.3.7
+  custom_lint: ^0.5.7
   json_serializable: ^6.7.1
-  freezed: ^2.4.3
+  freezed: ^2.4.6
   very_good_analysis: ^5.1.0
   hive_generator: ^2.0.1
-  
 
 flutter:
   uses-material-design: true
